<resources>
    <string name="app_name">Food Track</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_qr_scan">Scanner QR</string>
    <string name="menu_coupons">Cupones</string>
    <string name="menu_orders_history">Mis pedidos</string>
    <string name="menu_location">Locales cercanos</string>
    <string name="error_message">Ocurrió un error. Por favor, contactese con un administrador.</string>
    <string name="search_market">Buscar local</string>
    <string name="no_name_mayus">NO NAME</string>
    <string name="no_name_minus">No name</string>
    <string name="go_to_make_order">Hacer pedido al local</string>
    <string name="fake_street">Calle Falsa 123</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product">Producto</string>
    <string name="price_number">$0.00</string>
    <string name="see_menu">Ver menu</string>
    <string name="product_description">Descripción del producto</string>
    <string name="menu_favorites">FAVORITOS</string>
</resources>