<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_location"
            android:title="@string/menu_location" />

        <item
            android:id="@+id/nav_qr_scanner"
            android:icon="@drawable/ic_qr_code_scanner"
            android:title="@string/menu_qr_scan" />
        <item
            android:id="@+id/cuponFragment"
            android:icon="@drawable/ic_coupon"
            android:title="@string/menu_coupons" />
        <item
            android:id="@+id/ordersHistoryFragment"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_orders_history" />

    </group>
</menu>