<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.team404.foodtrack.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_marketListFragment"
            app:destination="@id/marketListFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.team404.foodtrack.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/cuponFragment"
        android:name="com.team404.foodtrack.ui.cuponUI.CouponFragment"
        android:label="CuponFragment" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.team404.foodtrack.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/marketListFragment"
        android:name="com.team404.foodtrack.ui.market.MarketListFragment"
        android:label="LOCALES"
        tools:layout="@layout/fragment_market_list" >
        <action
            android:id="@+id/action_marketListFragment_to_marketFragment"
            app:destination="@id/marketFragment" />
    </fragment>
    <fragment
        android:id="@+id/marketFragment"
        android:name="com.team404.foodtrack.ui.market.MarketFragment"
        android:label="LOCAL"
        tools:layout="@layout/fragment_market" >
        <action
            android:id="@+id/action_marketFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
        <action
            android:id="@+id/action_marketFragment_to_selectConsumptionModeFragment"
            app:destination="@id/selectConsumptionModeFragment" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.team404.foodtrack.ui.market.menu.MenuFragment"
        android:label="MENU"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/selectOrderProductsFragment"
        android:name="com.team404.foodtrack.ui.order.SelectOrderProductsFragment"
        android:label=""
        tools:layout="@layout/select_products_drawer_layout" >
        <action
            android:id="@+id/action_selectOrderProductsFragment_to_selectConsumptionModeFragment"
            app:destination="@id/selectConsumptionModeFragment" />
        <action
            android:id="@+id/action_selectOrderProductsFragment_to_selectPaymentMethodFragment"
            app:destination="@id/selectPaymentMethodFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.team404.foodtrack.ui.maps.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_qr_scanner"
        android:label="@string/menu_qr_scan"
        android:name="com.team404.foodtrack.ui.camera.CameraFragment"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_nav_qr_scanner_to_selectConsumptionModeFragment"
            app:destination="@id/selectConsumptionModeFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectConsumptionModeFragment"
        android:name="com.team404.foodtrack.ui.order.SelectConsumptionModeFragment"
        android:label="fragment_select_consumption_mode"
        tools:layout="@layout/fragment_select_consumption_mode" >
        <action
            android:id="@+id/action_selectConsumptionModeFragment_to_selectOrderProductsFragment"
            app:destination="@id/selectOrderProductsFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectPaymentMethodFragment"
        android:name="com.team404.foodtrack.ui.order.SelectPaymentMethodFragment"
        android:label="fragment_select_payment_method"
        tools:layout="@layout/fragment_select_payment_method" >
        <action
            android:id="@+id/action_selectPaymentMethodFragment_to_selectOrderProductsFragment"
            app:destination="@id/selectOrderProductsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favFragment"
        android:name="com.team404.foodtrack.ui.market.favs.FavFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_fav">
        <action
            android:id="@+id/action_favFragment_to_selectConsumptionModeFragment"
            app:destination="@id/selectConsumptionModeFragment" />
    </fragment>

</navigation>